--- a/css/style.css
+++ b/css/style.css
@@ -76,3 +76,148 @@ font-weight: 600;
     border-radius: 16px! important;
     margin-bottom: 20px;
 }
+/*------------------services----------------*/
+#services{
+    background-image:linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)),url(/images/pexels-photo-3965520.jpeg);
+    background-size: cover;
+    background-position: center;
+    color:white;
+    background-attachment: fixed;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+#services h1{
+    text-align: center;
+    color: white;
+    padding-bottom: 10px;
+}
+#services h1::after{
+    content: "";
+    background:white;
+    display: block;
+    height: 3px;
+    width:170px;
+    margin: 20px auto 5px;
+}
+.services{
+    margin-top: 40px;
+}
+.icon{
+    font-size: 40px;
+    margin:20px auto;
+    padding:20px;
+    height:80px;
+    width: 80px;
+    border:1px solid white;
+    border-radius: 50%;
+}
+#services p{
+font-size: 14px;
+margin-top: 20px;
+color:#ccc;
+}
+.services  .col-md-3:hover{
+    background:#007bff;
+    cursor:pointer;
+    transition:0.7s
+
+}
+/*------------------------TEAM MEMBERS-----------------------*/
+#team{
+padding-top: 50px;
+padding-bottom: 50px;
+color:#555;
+}
+
+#team h1{
+    text-align: center;
+    color:#555;
+    padding-bottom: 10px;
+}
+#team h1::after{
+    content:"";
+    background:black;
+    display: block;
+    height:3px;
+    width:170px;
+    margin:5px auto;
+}
+.img-responsive{
+    width:170px;
+    height:200px;
+    position: center;
+    top:0;
+    z-index: 10;
+    margin-left:0px;
+    padding-left: 0px;
+}
+.profile-pic{
+    margin-top: 25px;
+    
+}
+.profile-pic .img-box{
+    opacity:1;
+    display: block;
+    position: relative;
+    
+}
+.profile-pic .img-box img{
+   filter: grayscale(1);
+    
+}
+.profile-pic .img-box img:hover{
+    filter: grayscale(0);
+    cursor: pointer;
+ }
+ .profile-pic h2{
+     font-size:22px;
+     font-weight: bold;
+     margin-top: 15px;
+     color:rgb(126, 99, 156);
+ }
+ .profile-pic h3{
+    font-size:15px;
+    font-weight: bold;
+    margin-top: 15px;
+    
+}
+#team .fa{
+    height: 25px;
+    width:25px;
+   color:blue;
+   background-color: white;
+   padding:4px;
+   border-radius: 50%;
+}
+
+.img-box ul{
+    padding:5px;
+    position: absolute;
+    z-index: 2;
+    bottom:0;
+    left:10%;
+    transform: translateX(20%);
+    opacity:0;
+}
+.img-box ul li{
+    padding:3px;
+    display:inline-block;
+}
+.img-box:hover ul{
+    opacity: 1;
+}
+.img-box ul, .img-box ul li{
+    transition:0.5s;
+}
+/*----------------------promo---------------*/
+#promo{
+    background-image:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(/images/promos.jpeg);
+    background-size: cover;
+    background-position: center;
+    color: #ccc;
+    background-attachment: fixed;
+    text-align: center;
+    padding: 100px;
+    font-size: 38px;
+    font-family: sans-serif;
+}
