--- a/css/style.css
+++ b/css/style.css
@@ -129,12 +129,12 @@ padding-bottom: 50px;
 color:#555;
 }
 
-#team h1{
+h1{
     text-align: center;
     color:#555;
     padding-bottom: 10px;
 }
-#team h1::after{
+ h1::after{
     content:"";
     background:black;
     display: block;
@@ -221,3 +221,95 @@ color:#555;
     font-size: 38px;
     font-family: sans-serif;
 }
+/*------------------------price plan--------------------------*/
+
+#price
+{
+padding-top: 40px ;
+padding-bottom: 0px;
+background-color:#efefef;
+}
+.single-price{
+    margin:10px auto;
+    display: inline;
+    float: left;
+    width: 100%;
+    background-color: #fff;
+    color:red;
+    transition: 1s;
+}
+.single-price:hover{
+    box-shadow: 0px 2px 10px 0px blue;
+}
+.price-head{
+    background-color: blue;
+    
+    float: left;
+    padding:10px 5px;
+    text-align: center;
+    width:100%;
+}
+.price-head h2{
+    color:#fff;
+    font-size:30px;
+    font-weight: bold;
+    margin-bottom: 1px;
+    text-transform: uppercase;
+}
+.price-head p{
+    font-size:20px;
+    color:black;
+    font-weight: bold;
+    line-height: 30px;
+   
+
+}
+#price span{
+    font-size: 15px;
+}
+.price-content{
+    display: inline;
+    float:left;
+    width:100%;
+    padding: 0px 10px;
+    
+    color: black;
+}
+.price-content ul li{
+    list-style-type: none;
+    border-bottom: 1px solid #efefef;
+    padding:10px 5px;
+}
+ul li:last-child{
+    border: none;
+}
+.fa-check-circle-o{
+    color:green;
+    margin-right:10px ;
+}
+.fa-times-circle-o{
+    color:red;
+    margin-right:10px ;
+}
+.buy-btn
+{
+    display:inline;
+    float:left;
+    padding:2px 15px;
+    text-align: center;
+   width:100%;
+   background-color: #ccc;
+   border-radius: 3px;
+   display: inline-block;
+   transition: 1.0s;
+}
+.buy-btn:hover{
+    border-color: 1px solid white;
+    background-color: #3f51b5;
+    color:white;
+}
+a{
+    text-decoration: none! important;
+}
+
+
