--- a/css/style.css
+++ b/css/style.css
@@ -55,14 +55,17 @@ width:100%;
     padding-top: 50px;
     padding-bottom: 50px;
     color:#555;
+
 }
 #about .btn{
     margin-top: 20px;
     margin-bottom: 30px;
     
+    
 }
 .about-content{
     padding-top: 20px;
+    
 }
 .skills-bar p{
 margin-bottom: 6px;
@@ -78,7 +81,7 @@ font-weight: 600;
 }
 /*------------------services----------------*/
 #services{
-    background-image:linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)),url(/images/pexels-photo-3965520.jpeg);
+    background-image:linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.5)),url(/images/pexels-photo-3965520.jpeg);
     background-size: cover;
     background-position: center;
     color:white;
@@ -225,9 +228,11 @@ h1{
 
 #price
 {
+    
 padding-top: 40px ;
 padding-bottom: 0px;
 background-color:#efefef;
+
 }
 .single-price{
     margin:10px auto;
@@ -235,15 +240,15 @@ background-color:#efefef;
     float: left;
     width: 100%;
     background-color: #fff;
-    color:red;
-    transition: 1s;
+    transition: 0.5s;
+   
 }
 .single-price:hover{
     box-shadow: 0px 2px 10px 0px blue;
 }
 .price-head{
     background-color: blue;
-    
+    display: inline;
     float: left;
     padding:10px 5px;
     text-align: center;
@@ -253,7 +258,7 @@ background-color:#efefef;
     color:#fff;
     font-size:30px;
     font-weight: bold;
-    margin-bottom: 1px;
+    margin-bottom: 5px;
     text-transform: uppercase;
 }
 .price-head p{
@@ -271,7 +276,7 @@ background-color:#efefef;
     display: inline;
     float:left;
     width:100%;
-    padding: 0px 10px;
+    padding: 0px 50px;
     
     color: black;
 }
@@ -291,17 +296,23 @@ ul li:last-child{
     color:red;
     margin-right:10px ;
 }
+.price-button{
+    display:inline;
+    float: left;
+    padding:15px 15px ;
+    text-align: center;
+    width: 100%;
+
+}
 .buy-btn
 {
-    display:inline;
-    float:left;
-    padding:2px 15px;
-    text-align: center;
-   width:100%;
-   background-color: #ccc;
-   border-radius: 3px;
-   display: inline-block;
-   transition: 1.0s;
+    display:inline-block;
+    background-color: #ccc;
+    border-radius: 3px;
+    padding:15px 50px;
+    font-size: 18px;
+    
+   
 }
 .buy-btn:hover{
     border-color: 1px solid white;
@@ -310,6 +321,60 @@ ul li:last-child{
 }
 a{
     text-decoration: none! important;
+    
 }
-
+/*--------------testimonials----------------------*/
+#testimonials{
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+#testimonials .row{
+    margin-top:30px;
+   
+}
+.col-md-4{
+    margin:40px auto;
+}
+.profile{
+    padding:70px 10px 10px;
+    background-color: rgb(230, 227, 227);
+}
+.user{
+    width:120px;
+    height:120px;
+    border-radius: 50%;
+    
+    }
+.profile img{
+    top:-60px;
+    position: absolute;
+    left: calc(50%-60px);
+    border: 10px solid #fff;
+}
+.profile h3{
+    font-size: 20px;
+    margin-top: 15px;
+    color:#007bff;
+}
+.profile span{
+font-size: 15px;
+color:#333;
+}
+blockquote{
+    font-size: 16px;
+    line-height: 30px;
+}
+.profile:hover{
+    box-shadow: 0 0 15px  rgb(100, 97, 97);
+    cursor: pointer;
+    transition: 0.5s;
+}
+/*-----------------get in touch--------------*/
+#contact{
+    background: rgb(219, 215, 215);
+    padding-top:40px;
+    padding-bottom: 40px;
+    color: #777;
+}
+.co
 
